--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.1.2",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/drawer": "^7.3.2",
     "@react-navigation/material-top-tabs": "^7.2.7",
@@ -23,6 +24,7 @@
     "react": "18.3.1",
     "react-native": "0.76.8",
     "react-native-gesture-handler": "^2.25.0",
+    "react-native-maps": "1.18.0",
     "react-native-pager-view": "6.5.1",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.1",
