--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
     "expo": "~52.0.42",
+    "expo-app-loading": "^2.1.1",
     "expo-font": "~13.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
@@ -27,6 +28,7 @@
     "react-native-maps": "1.18.0",
     "react-native-pager-view": "6.5.1",
     "react-native-paper": "^5.13.1",
+    "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-svg": "15.8.0",
