--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/material-top-tabs": "^7.2.7",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
+    "axios": "^1.9.0",
     "expo": "~52.0.42",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~13.0.4",
