--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-updates": "~0.27.4",
     "react": "18.3.1",
     "react-native": "0.76.8",
+    "react-native-animatable": "^1.4.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-maps": "1.18.0",
     "react-native-pager-view": "6.5.1",
@@ -34,7 +35,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-svg": "15.8.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
